# p4runtime-benchmark

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark_packet_in.cpp  benchmark_write.cpp  main.cpp  tamp'] = pd.to_numeric(df.timestamp)
evaluation/: Untitled.ipynb  measurement.txt
evaluation/results/: measurement.txt
include/: utils.h
misc/: convert_proto.sh  start_tofino_model_and_stratum.sh
src/: benchmark_packet_in.cpp  benchmark_read.cpp  benchmark_write.cpp
